# growth-record

./: .gitignore  AGENTS.md  Personal Growth Record-V1.html  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml  deploy-worker.yml  release-clients.yml
apps/desktop/: README.md  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: main.rs
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/: .gitignore  build.gradle.kts
apps/mobile/android/app/: build.gradle.kts
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/test/: widget_test.dart
docs/plans/: 2026-05-07-cloudflare-growth-record-pdca.md
migrations/: 0001_initial.sql  0002_user_password_policy.sql  0003_email_accounts.sql
public/: admin.html  index.html  mobile.html
public/assets/: admin.js  app.css  app.js
scripts/: collect-release-artifacts.mjs  mobile-layout-check.mjs  mobile-preview-post-login.mjs  mobile-preview.js  mobile-preview.mjs  set-release-version.mjs
skills/deploy-worker/: SKILL.md
skills/package-clients/: SKILL.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src/worker/: api-routes.ts  auth.ts  http.ts  index.ts  router.ts  types.ts
tests/: admin-auth.test.ts  api-routes.test.ts  desktop-shell.test.ts  http.test.ts  index.test.ts  mobile-shell.test.ts  router.test.ts  static-assets.test.ts
(+2 files in other folders)
