[package]
name = "growth-record-desktop"
version = "0.1.0"
description = "Desktop client for Growth Record."
authors = ["Growth Record Contributors"]
edition = "2021"
license = "UNLICENSED"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
